fix style login

--- a/app/index.jade
+++ b/app/index.jade
@@ -40,16 +40,16 @@ block navbar
             li
               a(href='#faq#web')
                 i.icon-question-sign.icon-white
-                | FAQ
+                | &nbsp;FAQ
             li
               a(href='#help#{{location}}')
                 i.icon-info-sign.icon-white
-                | Handleiding
+                | &nbsp;Handleiding
             li.dropdown
               a.dropdown-toggle(href='',
               data-toggle='dropdown')
                 i.icon-user.icon-white
-                | {{StandBy.resources.name}}
+                | &nbsp;{{StandBy.resources.name}}
                 span(ng-show='StandBy.resources.role == 0') [SU]
                 b.caret
               ul.dropdown-menu
