--- a/app/views/login/forgot-password.jade
+++ b/app/views/login/forgot-password.jade
@@ -1,18 +1,19 @@
 #forgot.boxed(ng-show='views.forgot')
-  form(ng-submit='forgot()')
-    img(ng-src='{{StandBy.config.profile.logos.login}}',
-    alt='{{StandBy.config.profile.title}}')
-    h4.form-signin-heading
-      | {{ui.login.forgetPassword}}
-    .alert(class="{{alert.forget.type}}",
-    ng-show='alert.forget.display')
-      button.close(type='button',
-      ng-click='alert.forget=false') ×
-      | {{alert.forget.message}}
-    input(type='text',
-    ng-model='remember.id',
-    placeholder='{{ui.login.placeholder_username}}')
-    button.btn.btn-large.btn-primary(type='submit')
-      | {{ui.login.resetPassword}}
-    p
-      small: a(ng-click='views.login=true; views.forgot=false') {{ui.login.returnLogin}}
+	form(ng-submit='forgot()')
+		img(ng-src='{{StandBy.config.profile.logos.login}}',
+		alt='{{StandBy.config.profile.title}}')
+		h4.form-signin-heading
+			| {{ui.login.forgetPassword}}
+		.alert(class="{{alert.forget.type}}",
+		ng-show='alert.forget.display')
+			button.close(type='button',
+			ng-click='alert.forget=false') ×
+			| {{alert.forget.message}}
+		input(type='text',
+		ng-model='remember.id',
+		placeholder='{{ui.login.placeholder_username}}')
+		button.btn.btn-large.btn-primary(type='submit')
+			| {{ui.login.resetPassword}}
+		p
+			small: a(ng-click='views.login=true; views.forgot=false') {{ui.login.returnLogin}}
+		span.version: a(href='version.html', target='_blank') StandBy v{{StandBy.config.version}}
