--- a/app/views/login/login-form.jade
+++ b/app/views/login/login-form.jade
@@ -1,39 +1,42 @@
 #login.boxed(ng-show='views.login',
 ng-hide='views.help || views.changePass')
-  form(ng-submit='login()')
-    img(ng-src='{{StandBy.config.profile.logos.login}}',
-    alt='{{StandBy.config.profile.title}}')
-    h4.form-signin-heading(ng-show='StandBy.config.profile.own')
-      | {{StandBy.config.profile.title}}
-    h4.form-signin-heading(ng-hide='StandBy.config.profile.own')
-      | {{ui.login.header}}
-    .alert(class="{{alert.login.type}}",
-    ng-show='alert.login.display')
-      button.close(type='button',
-      ng-click='alert.login=false') ×
-      | {{alert.login.message}}
-    input(type='text',
-    ng-model='logindata.username',
-    placeholder='{{ui.login.placeholder_username}}',
-    autofocus='autofocus')
-    input(type='password',
-    ng-model='logindata.password',
-    placeholder='{{ui.login.placeholder_password}}')
-    label.checkbox.span3
-      input(type='checkbox',
-      ng-model='logindata.remember')
-      | {{ui.login.label_rememberMe}}
-    button.btn.btn-large.btn-primary(type='submit')
-      | {{ui.login.button_login}}
-    p
-      small
-        a(ng-click='views.forgot=true; views.login=false;')
-          | {{ui.login.forgot_password}}
-        span  | 
-        a(ng-click='views.help=true')
-          | {{ui.help.help}}
-        span  | 
-        a(ng-click='changeLanguage("en")',
-        ng-show='app.settings.language=="nl"') English
-        a(ng-click='changeLanguage("nl")',
-        ng-show='app.settings.language=="en"') Nederlands
+	form(ng-submit='login()')
+		img(ng-src='{{StandBy.config.profile.logos.login}}',
+		alt='{{StandBy.config.profile.title}}')
+		h4.form-signin-heading(ng-show='StandBy.config.profile.own')
+			| {{StandBy.config.profile.title}}
+		h4.form-signin-heading(ng-hide='StandBy.config.profile.own')
+			| {{ui.login.header}}
+		.alert(class="{{alert.login.type}}",
+		ng-show='alert.login.display')
+			button.close(type='button',
+			ng-click='alert.login=false') ×
+			| {{alert.login.message}}
+		input(type='text',
+		ng-model='logindata.username',
+		placeholder='{{ui.login.placeholder_username}}',
+		autofocus='autofocus')
+		input(type='password',
+		ng-model='logindata.password',
+		placeholder='{{ui.login.placeholder_password}}')
+		label.checkbox.span3
+			input(type='checkbox',
+			ng-model='logindata.remember')
+			| {{ui.login.label_rememberMe}}
+		button.btn.btn-large.btn-primary(type='submit')
+			| {{ui.login.button_login}}
+		p
+			small
+				a(ng-click='views.forgot=true; views.login=false;')
+					| {{ui.login.forgot_password}}
+				span &nbsp;|&nbsp;
+				a(ng-click='views.help=true')
+					| {{ui.help.help}}
+		p
+			small
+				a(ng-click='changeLanguage("en")')
+					| English
+				span &nbsp;|&nbsp;
+				a(ng-click='changeLanguage("nl")')
+					| Nederlands
+		span.version: a(href='version.html', target='_blank') StandBy v{{StandBy.config.version}}
