fix: styling in preloader

--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -6,4 +6,4 @@
 	forgot-password
 	change-password
 	img(src='images/standby_logo_small.png', alt='StandBy Logo', ng-hide='StandBy.config.profile.own')
-	download-mobile-app(ng-hide='browser.mobile && browser.screen.width < 768')
+	download-mobile-app#download(ng-hide='browser.mobile && browser.screen.width < 768')
