--- a/app/views/login/preloaded.jade
+++ b/app/views/login/preloaded.jade
@@ -2,7 +2,5 @@
   img(ng-src='{{StandBy.config.profile.logos.login}}',
   alt='{{StandBy.config.profile.title}}')
   h4 {{ui.login.setting_up_app}}
-  .progress.progress-striped.active.span3: .bar
+  .progress.progress-striped.active: .bar
   span.muted
-  br
-  br
