--- a/app/views/dashboard/snapshots.jade
+++ b/app/views/dashboard/snapshots.jade
@@ -69,4 +69,4 @@
       hr
       small.pull-left(style='margin-top: -10px;', ng-hide='loadingAvailability')
         span.text-warning {{ui.planboard.lastSyncTime}}
-        span.muted {{availability.synced | nicelyDate}}
+        span.muted &nbsp; {{availability.synced | nicelyDate}}
