--- a/app/views/help.jade
+++ b/app/views/help.jade
@@ -3,7 +3,7 @@
   .btn-group.pull-right
     a.btn.btn-success(href='http://static.ask-cs.com/standby/Handleiding%20Standby{{(config.profile.meta=="knrm") && " KNRM" || ""}}.pdf', target='_blank')
       i.icon-book.icon-white
-      | {{ui.downloads.manual}}
+      | &nbsp;{{ui.downloads.manual}}
 
 .row-fluid
   .tabbable.tabs-left
