--- a/app/views/planboard.jade
+++ b/app/views/planboard.jade
@@ -49,11 +49,11 @@ section#planboard(ng-controller='timeline')
           p
             small.pull-left
               span.text-warning {{ui.planboard.lastSyncTime}}
-              span.muted {{data.synced | nicelyDate}}
+              span.muted &nbsp; {{data.synced | nicelyDate}}
             small.pull-right
               span.text-warning {{ui.planboard.dataRangeStart}}
               span.muted {{data.periods.start | nicelyDate}}
-              | |
+              | &nbsp;&nbsp;| &nbsp;
               span.text-warning {{ui.planboard.dataRangeEnd}}
               span.muted {{data.periods.end | nicelyDate}}
 
@@ -149,10 +149,10 @@ section#planboard(ng-controller='timeline')
           p
             small.pull-left
               span.text-warning {{ui.planboard.lastSyncTime}}
-              span.muted {{data.synced | nicelyDate}}
+              span.muted &nbsp; {{data.synced | nicelyDate}}
             small.pull-right
               span.text-warning {{ui.planboard.dataRangeStart}}
               span.muted {{data.periods.start | nicelyDate}}
-              | |
+              | &nbsp;&nbsp;| &nbsp;
               span.text-warning {{ui.planboard.dataRangeEnd}}
               span.muted {{data.periods.end | nicelyDate}}
